--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>News Headlines Hunt</title>
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
