--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>News Headlines Hunt</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Get live news headlines from CNN, google-news, techcrunch, espn and all other top news sources.">
+    <meta name="keywords" content="news headlines, headlines, news hunt, headlines hunt">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Mobile top bar-->
+    <!-- Chrome, Firefox OS, Opera and Vivaldi -->
+    <meta name="theme-color" content="#f7f7f7">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#f7f7f7">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f7f7f7">
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Serif:400/Roboto:300,400,600,700,400i">
     <!--
@@ -14,7 +27,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>News Headlines Hunt</title>
     <base href="/" />
   </head>
   <body>
