--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     
     <!-- Mobile top bar-->
     <!-- Chrome, Firefox OS, Opera and Vivaldi -->
-    <meta name="theme-color" content="#f7f7f7">
+    <meta name="theme-color" content="#c3e89c">
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#f7f7f7">
+    <meta name="msapplication-navbutton-color" content="#c3e89c">
     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#f7f7f7">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#c3e89c">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Serif:400/Roboto:300,400,600,700,400i">
