--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     
     <!-- Mobile top bar-->
     <!-- Chrome, Firefox OS, Opera and Vivaldi -->
-    <meta name="theme-color" content="#c3e89c">
+    <meta name="theme-color" content="#5e9523">
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#c3e89c">
+    <meta name="msapplication-navbutton-color" content="#5e9523">
     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#c3e89c">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#5e9523">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Serif:400/Roboto:300,400,600,700,400i">
