--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <title>News Headlines Hunt</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Get live news headlines from CNN, google-news, techcrunch, espn and all other top news sources.">
-    <meta name="keywords" content="news headlines, headlines, news hunt, headlines hunt">
+    <meta name="description" content="Get live news headlines, Find the latest breaking news and information on the top stories, Check out today’s most recent, Latest news headlines from around the world.">
+    <meta name="keywords" content="news headlines, breaking news, news online, U.S. news, world news, technology, sports, entertainment, business">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Mobile top bar-->
