--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>News Headlines Hunt</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Get live news headlines, Find the latest breaking news and information on the top stories, Check out today’s most recent, Latest news headlines from around the world.">
+    <meta name="description" content="Get Latest news headlines from around the world. Get live news headlines, Check out today’s most recent news, Find the latest breaking news.">
     <meta name="keywords" content="news headlines, breaking news, news online, U.S. news, world news, technology, sports, entertainment, business">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +18,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#5e9523">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    
+    <link rel="manifest" href="/manifest.json">
+
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Serif:400/Roboto:300,400,600,700,400i">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
