--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,25 @@
     </script>
   </head>
   <body>
+    <!--Facebook SDK-->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '638215303028374',
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
