added sortby in bottom

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>News Headlines Hunt</title>
     <meta charset="utf-8">
+    <!--<link rel="dns-prefetch" href="//cdn.">-->
+    
+    <!--<link rel="preload" href="//logo.png" as="image">-->
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Get Latest news headlines from around the world. Get live news headlines, Check out today’s most recent news, Find the latest breaking news.">
     <meta name="keywords" content="news headlines, breaking news, news online, U.S. news, world news, technology, sports, entertainment, business">
